[gd_scene load_steps=23 format=3 uid="uid://c1fhjpd6ob28g"]

[ext_resource type="Script" path="res://frog.gd" id="1_676vf"]
[ext_resource type="Texture2D" uid="uid://iipt7xjs28to" path="res://Sunny Land Collection Files/Assets/Props Items and VFX/Sunnyland FX/Spritesheets/enemy-deadth.png" id="1_efhva"]
[ext_resource type="Texture2D" uid="uid://74hpft8tbawx" path="res://Sunny Land Collection Files/Assets/Characters/Enemies and NPC/frog/Spritesheets/frog-idle.png" id="2_q0snt"]
[ext_resource type="Texture2D" uid="uid://dfphckbe70tps" path="res://Sunny Land Collection Files/Assets/Characters/Enemies and NPC/frog/Spritesheets/frog-jump.png" id="3_cx4th"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vvstv"]
size = Vector2(20, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_em5tp"]
atlas = ExtResource("1_efhva")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pww6"]
atlas = ExtResource("1_efhva")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_61jeu"]
atlas = ExtResource("1_efhva")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsfu6"]
atlas = ExtResource("1_efhva")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_224li"]
atlas = ExtResource("1_efhva")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy17"]
atlas = ExtResource("1_efhva")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqff4"]
atlas = ExtResource("2_q0snt")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn0sn"]
atlas = ExtResource("2_q0snt")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpagd"]
atlas = ExtResource("2_q0snt")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3iqi"]
atlas = ExtResource("2_q0snt")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwxht"]
atlas = ExtResource("3_cx4th")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kdje"]
atlas = ExtResource("3_cx4th")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_boqre"]
atlas = ExtResource("3_cx4th")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wj125"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_em5tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pww6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61jeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsfu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_224li")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy17")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqff4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn0sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpagd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3iqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqff4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqff4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqff4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqff4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqff4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwxht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kdje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boqre")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o2iwk"]
radius = 138.004

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tuavo"]
size = Vector2(18, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3t0q"]
size = Vector2(23.5, 10)

[node name="Frog" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_676vf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_vvstv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -11)
sprite_frames = SubResource("SpriteFrames_wj125")
animation = &"Idle"
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_o2iwk")

[node name="PlayerDeath" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_tuavo")

[node name="PlayerCollision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_k3t0q")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
